<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.MainActivity">
    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:background="@drawable/osfp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">
            <TextView
                android:id="@+id/header"
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:visibility="visible" />
            <RelativeLayout
                style="@style/QuestionLayouts"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:visibility="visible">
                <TextView
                    android:id="@+id/Question1"
                    style="@style/QuestionTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question1"
                    android:textAlignment="center"
                    android:visibility="visible" />
                <ImageView
                    android:id="@+id/er1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/Question1"
                    android:contentDescription="@string/im_q1"
                    android:visibility="visible"
                    app:srcCompat="@drawable/question1" />
                <RadioGroup
                    android:id="@+id/erotisi1"
                    style="@style/RadioGroupViews"
                    android:layout_below="@+id/Question1"
                    android:layout_toEndOf="@+id/er1"
                    android:layout_toRightOf="@+id/er1"
                    android:visibility="visible">
                    <RadioButton
                        android:id="@+id/ap1921"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/er1_ap1"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                    <RadioButton
                        android:id="@+id/ap1934"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/er1_ap2"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                    <RadioButton
                        android:id="@+id/ap1925"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/er1_ap3"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                    <RadioButton
                        android:id="@+id/ap1900"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/er1_ap4"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                </RadioGroup>
            </RelativeLayout>
            <RelativeLayout
                style="@style/QuestionLayouts"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:visibility="visible">
                <TextView
                    android:id="@+id/Question2"
                    style="@style/QuestionTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question2"
                    android:textAlignment="center"
                    android:visibility="visible" />
                <RadioGroup
                    android:id="@+id/erotisi2"
                    style="@style/RadioGroupViews"
                    android:layout_below="@+id/Question2"
                    android:layout_toEndOf="@+id/er2"
                    android:layout_toRightOf="@+id/er2">
                    <RadioButton
                        android:id="@+id/yes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/yes"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                    <RadioButton
                        android:id="@+id/no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                </RadioGroup>
                <ImageView
                    android:id="@+id/er2"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/im_q2"
                    android:visibility="visible"
                    app:srcCompat="@drawable/question2"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>
            <RelativeLayout
                style="@style/QuestionLayouts"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:visibility="visible">
                <TextView
                    android:id="@+id/Question3"
                    style="@style/QuestionTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question3"
                    android:textAlignment="center"
                    android:visibility="visible" />
                <ImageView
                    android:id="@+id/er3"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/Question3"
                    android:contentDescription="@string/im_q3"
                    android:visibility="visible"
                    app:srcCompat="@drawable/question3" />
                <RadioGroup
                    android:id="@+id/erotisi3"
                    style="@style/RadioGroupViews"
                    android:layout_below="@+id/Question3"
                    android:layout_toEndOf="@+id/er3"
                    android:layout_toRightOf="@+id/er3"
                    android:visibility="visible">
                    <RadioButton
                        android:id="@+id/ap2004"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/er3_ap1"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                    <RadioButton
                        android:id="@+id/ap2005"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/er3_ap2"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                    <RadioButton
                        android:id="@+id/ap2006"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/er3_ap3"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                </RadioGroup>
            </RelativeLayout>
            <RelativeLayout
                style="@style/QuestionLayouts"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:visibility="visible">
                <TextView
                    android:id="@+id/Question4"
                    style="@style/QuestionTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question4"
                    android:textAlignment="center"
                    android:visibility="visible" />
                <ImageView
                    android:id="@+id/er4"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/Question4"
                    android:contentDescription="@string/im_q4"
                    android:visibility="visible"
                    app:srcCompat="@drawable/question4" />
                <RadioGroup
                    android:id="@+id/erotisi4"
                    style="@style/RadioGroupViews"
                    android:layout_below="@+id/Question4"
                    android:layout_toEndOf="@+id/er4"
                    android:layout_toRightOf="@+id/er4"
                    android:visibility="visible">
                    <RadioButton
                        android:id="@+id/apLev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/er4_ap1"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                    <RadioButton
                        android:id="@+id/apBen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/er4_ap2"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                </RadioGroup>
            </RelativeLayout>
            <RelativeLayout
                style="@style/QuestionLayouts"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:visibility="visible">
                <TextView
                    android:id="@+id/Question5"
                    style="@style/QuestionTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question5"
                    android:textAlignment="center"
                    android:visibility="visible" />
                <ImageView
                    android:id="@+id/er5"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/Question5"
                    android:contentDescription="@string/im_q5"
                    android:visibility="visible"
                    app:srcCompat="@drawable/question5" />
                <LinearLayout
                    android:id="@+id/erotisi5"
                    style="@style/RadioGroupViews"
                    android:layout_below="@+id/Question5"
                    android:layout_toEndOf="@+id/er5"
                    android:layout_toRightOf="@+id/er5"
                    android:orientation="vertical">
                    <CheckBox
                        android:id="@+id/apRetsos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/er5_ap1"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                    <CheckBox
                        android:id="@+id/apSiovas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/er5_ap2"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                    <CheckBox
                        android:id="@+id/apChori"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/er5_ap3"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                    <CheckBox
                        android:id="@+id/apPardo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/er5_ap4"
                        android:textColor="#E53935"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                style="@style/QuestionLayouts"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:visibility="visible">
                <TextView
                    android:id="@+id/name"
                    style="@style/QuestionTitles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Name"
                    android:textAlignment="center"
                    android:visibility="visible" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/YName"/>
                    <EditText
                        android:id="@+id/WriteYourName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"/>
                    </LinearLayout>
                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/submit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
